metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/Mavenlink_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Mavenlink Snapshot</label>
    <nameField>
        <label>Mavenlink Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mavenlink Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>