metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mavenlink Snapshots</relationshipLabel>
    <relationshipName>Mavenlink_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>