metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID (18 digits)</label>
    <length>156</length>
    <type>Text</type>
</CustomField>