metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Billable_Hours_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_Tracked__c</fullName>
    <label>Billable Hours Tracked</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>