metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <length>40</length>
    <type>Text</type>
</CustomField>