metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Budget_Used__c.field-meta.xml
<CustomField>
    <fullName>Budget_Used__c</fullName>
    <label>Budget Used</label>
    <length>40</length>
    <type>Text</type>
</CustomField>