metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Contract_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sign_Date__c</fullName>
    <label>Contract Sign Date</label>
    <type>Date</type>
</CustomField>