metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Contracted_One_Off__c.field-meta.xml
<CustomField>
    <fullName>Contracted_One_Off__c</fullName>
    <label>Contracted One Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>