metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Contracted_One_Off_Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Contracted_One_Off_Original_Currency__c</fullName>
    <description>Value of the original contract in the original contract&apos;s currency.</description>
    <formula>Contracted_One_Off__c * Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value of the original contract in the original contract&apos;s currency.</inlineHelpText>
    <label>Contracted One Off - Original Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>