metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <description>Conversion rate from EUR to the original currency of the opportunity.</description>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>