metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/CS_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_Handover_Date__c</fullName>
    <label>CS Handover Date</label>
    <type>Date</type>
</CustomField>