metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Goal_Sign_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Goal_Sign_off_Date__c</fullName>
    <label>Goal Sign off Date</label>
    <type>Date</type>
</CustomField>