metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Internal_Project__c.field-meta.xml
<CustomField>
    <fullName>Internal_Project__c</fullName>
    <label>Internal Project?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>