metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Kick_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Kick_Off_Date__c</fullName>
    <label>Kick-Off Date</label>
    <type>Date</type>
</CustomField>