metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Last_Day_of_the_Reporting_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_the_Reporting_Month__c</fullName>
    <description>Indicates last day of the month the snapshot is representing</description>
    <formula>CreatedDate - 1</formula>
    <label>Last Day of the Reporting Month</label>
    <type>Date</type>
</CustomField>