metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Mavenlink_ID__c.field-meta.xml
<CustomField>
    <fullName>Mavenlink_ID__c</fullName>
    <label>Mavenlink ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>