metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Mavenlink_Project__c.field-meta.xml
<CustomField>
    <fullName>Mavenlink_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mavenlink Project</label>
    <referenceTo>mavenlink__Mavenlink_Project__c</referenceTo>
    <relationshipLabel>Mavenlink Snapshots</relationshipLabel>
    <relationshipName>Mavenlink_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>