metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Mavenlink_SF_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Mavenlink_SF_Project_ID__c</fullName>
    <label>Mavenlink SF Project ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>