metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Mavenlink_url__c.field-meta.xml
<CustomField>
    <fullName>Mavenlink_url__c</fullName>
    <label>Mavenlink url</label>
    <type>Url</type>
</CustomField>