metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Milestone_complete_Prior_Month__c.field-meta.xml
<CustomField>
    <fullName>Milestone_complete_Prior_Month__c</fullName>
    <label>Milestone % complete - Prior Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>