metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Milestone_weight_complete__c.field-meta.xml
<CustomField>
    <fullName>Milestone_weight_complete__c</fullName>
    <label>Milestone weight % complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>