metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/ML_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>ML_Project_Title__c</fullName>
    <label>ML Project Title</label>
    <length>156</length>
    <type>Text</type>
</CustomField>