metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/MRR_value__c.field-meta.xml
<CustomField>
    <fullName>MRR_value__c</fullName>
    <label>MRR value</label>
    <length>40</length>
    <type>Text</type>
</CustomField>