metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/MVP_Date__c.field-meta.xml
<CustomField>
    <fullName>MVP_Date__c</fullName>
    <label>MVP Date</label>
    <type>Date</type>
</CustomField>