metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Onboarding_Project_Manager_2__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Project_Manager_2__c</fullName>
    <label>Onboarding Project Manager 2</label>
    <length>156</length>
    <type>Text</type>
</CustomField>