metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <label>Opportunity ID (18 digits)</label>
    <length>156</length>
    <type>Text</type>
</CustomField>