metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Mavenlink Snapshots</relationshipLabel>
    <relationshipName>Mavenlink_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>