metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>BODEV-707: Additional field to capture Opportunity Type through the snapshot.</description>
    <label>Opportunity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>