metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Original_Currency__c</fullName>
    <description>Currency of the opportunity.</description>
    <label>Original Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>