metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Project_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Project_Backlog__c</fullName>
    <label>Project Backlog</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>