metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Project_Backlog_Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Project_Backlog_Original_Currency__c</fullName>
    <description>Project Backlog in the currency of the opportunity.</description>
    <formula>Project_Backlog__c * Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Backlog - Original Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>