metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Project_Groups__c.field-meta.xml
<CustomField>
    <fullName>Project_Groups__c</fullName>
    <label>Project Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>