metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Project_Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Project_Planned_Hours__c</fullName>
    <label>Project Planned Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>