metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Project_Sign_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Sign_Off_Date__c</fullName>
    <label>Project Sign-Off Date</label>
    <type>Date</type>
</CustomField>