metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Data I/E (Webdam)</fullName>
            </value>
            <value>
                <fullName>Hours (Webdam)</fullName>
            </value>
            <value>
                <fullName>Elite Onboarding (Webdam)</fullName>
            </value>
            <value>
                <fullName>Enterprise Onboarding (Webdam)</fullName>
            </value>
            <value>
                <fullName>Workstream Onboarding (Webdam)</fullName>
            </value>
            <value>
                <fullName>Quickstart Onboarding (Webdam)</fullName>
            </value>
            <value>
                <fullName>Standard Onboarding (Webdam)</fullName>
            </value>
            <value>
                <fullName>Enterprise (Flagship)</fullName>
            </value>
            <value>
                <fullName>Midmarket Workgroup (Flagship)</fullName>
            </value>
            <value>
                <fullName>Starter (flagship)</fullName>
                <label>Starter (Flagship)</label>
            </value>
            <value>
                <fullName>Midmarket Professional (Flagship)</fullName>
            </value>
            <value>
                <fullName>Custom - Additional Module Implementation</fullName>
            </value>
            <value>
                <fullName>Custom - Onboarding One-off Hours</fullName>
            </value>
            <value>
                <fullName>Custom - API / Integration Hours</fullName>
            </value>
            <value>
                <fullName>PS Asset Import/Export/Reporting (Bynder)</fullName>
            </value>
            <value>
                <fullName>8 Session Asset Bank Audit</fullName>
            </value>
            <value>
                <fullName>12 Session Asset Bank Audit</fullName>
            </value>
            <value>
                <fullName>5 Session Workflow Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>