metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Revenue_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognized__c</fullName>
    <label>Revenue Recognized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>