metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Revenue_Recognized_OrCur_Test__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognized_OrCur_Test__c</fullName>
    <formula>Contracted_One_Off__c * Delta_Milestone_weight_complete__c * Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Recognized - OrCur Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>