metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Revenue_Recognized_Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognized_Original_Currency__c</fullName>
    <description>Revenue recognized this month in the original opportunity currency.</description>
    <formula>Revenue_Recognized__c * Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Recognized - Original Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>