metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <label>Sales Office</label>
    <length>40</length>
    <type>Text</type>
</CustomField>