metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Sign_off_Status__c.field-meta.xml
<CustomField>
    <fullName>Sign_off_Status__c</fullName>
    <label>Sign off Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>