metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Solution_Owner__c.field-meta.xml
<CustomField>
    <fullName>Solution_Owner__c</fullName>
    <label>Solution Owner</label>
    <length>156</length>
    <type>Text</type>
</CustomField>