metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <label>Subsidiary</label>
    <length>140</length>
    <type>Text</type>
</CustomField>