metadata/force-app/main/default/objects/Mavenlink_Snapshot__c/fields/Time_to_sign_off__c.field-meta.xml
<CustomField>
    <fullName>Time_to_sign_off__c</fullName>
    <label>Time to sign off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>